feat(entities): add entities / news / video controllers
