# app/Http/Controllers/Api/V1/CommentsController.php
@@ -1,0 +1,47 @@
+<?php
+
+namespace App\Http\Controllers\Api\V1;
+
+use App\Http\Controllers\Api\ApiController as Controller;
+
+class CommentsController extends Controller
+{
+    /**
+     * @group Entities
+     * @return void
+     */
+    public function index()
+    {
+
+    }
+
+    /**
+     * @group Entities
+     * @param string $entity_id
+     * @return void
+     */
+    public function create(string $entity_id)
+    {
+
+    }
+
+    /**
+     * @group Entities
+     * @param string $comment_id
+     * @return void
+     */
+    public function update(string $comment_id)
+    {
+
+    }
+
+    /**
+     * @group Entities
+     * @param string $comment_id
+     * @return void
+     */
+    public function delete(string $comment_id)
+    {
+
+    }
+}
